# fuzzylli

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/: examples.ipynb  params.yaml
fuzzylli/: chebyshev.py  correlation_functions.py  cosmology.py  density.py  df.py  domain.py  eigenstates.py  ellipsoidal_collapse.py  filaments.py  generate_density.py  interpolation_jax.py  io_utils.py  mlp.py  parameters_from_ellipsoidal_collapse.py  poisson_disk.py  potential.py  powerspectrum.py  ray.py  special.py  spline.py  units.py  utils.py  wavefunction.py
