[metadata]
name = fuzzylli
version = 0.1
author = Tim Zimmermann
author_email = timzi@uio.no
description = Code for the reconstruction of FDM interference in cosmic filaments
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    ruamel.yaml
    numpy
    jax
    blackjax
    jaxopt
    diffrax
    optax
    scipy

[options.extras_require]
3D = 
    h5py
    hpp-fcl
    mpi4py
    pyvista
    yt

[options.package_data]
* = README.md
